# Crypto-Backtester-Duel

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SmaCross_bt.html  main.py  pyproject.toml  requirements.txt  tree.txt
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml
notebooks/: 01_backtesting-py_simple.ipynb  02_nautilus_simple.ipynb  02_nautilus_simple_low-level.ipynb  notebook_insights.md
src/: config.py  main.py
src/config/: config.py
src/data/: binance_api_downloader.py  ccxt_data_downloader.py  data_pipeline.py
src/runners/: backtesting_py.py  nautilus_node.py
src/strategies/: backtesting_py.py  nautilus.py
src/utils/: utils.py
